--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,15 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-iphone-114.png?v=35ef6fea80e50951"/>
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-iphone-114.png?v=35ef6fea80e50951"/>
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-ipad-144.png?v=784fdda39985ba20"/>
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-ipad-144.png?v=784fdda39985ba20"/>
+  <link rel="shortcut icon" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-iphone-114.png?v=35ef6fea80e50951"/>
+  <link rel="shortcut icon" sizes="196x196" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-iphone-196.png?v=271259d431f48a94"/>
+
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>工口君</title>
 </head>
 
 <body>
