--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="format-detection" content="telephone=no">
@@ -17,12 +16,12 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-iphone-114.png?v=35ef6fea80e50951"/>
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-iphone-114.png?v=35ef6fea80e50951"/>
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-ipad-144.png?v=784fdda39985ba20"/>
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-ipad-144.png?v=784fdda39985ba20"/>
-  <link rel="shortcut icon" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-iphone-114.png?v=35ef6fea80e50951"/>
-  <link rel="shortcut icon" sizes="196x196" href="//gtimg.ac.qq.com/h5/public/images/touch-icon-iphone-196.png?v=271259d431f48a94"/>
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href='%PUBLIC_URL%/icon.png'/>
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href='%PUBLIC_URL%/icon.png'/>
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href='%PUBLIC_URL%/icon.png'/>
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href='%PUBLIC_URL%/icon.png'/>
+  <link rel="shortcut icon" href='%PUBLIC_URL%/icon.png'/>
+  <link rel="shortcut icon" sizes="196x196" href='%PUBLIC_URL%/icon.png'/>
 
 
   <!--
