--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,17 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href='%PUBLIC_URL%/icon.png'/>
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href='%PUBLIC_URL%/icon.png'/>
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href='%PUBLIC_URL%/icon.png'/>
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href='%PUBLIC_URL%/icon.png'/>
-  <link rel="shortcut icon" href='%PUBLIC_URL%/icon.png'/>
-  <link rel="shortcut icon" sizes="196x196" href='%PUBLIC_URL%/icon.png'/>
-
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href='%PUBLIC_URL%/icon.png' />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href='%PUBLIC_URL%/icon.png' />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href='%PUBLIC_URL%/icon.png' />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href='%PUBLIC_URL%/icon.png' />
+  <link rel="shortcut icon" href='%PUBLIC_URL%/icon.png' />
+  <link rel="shortcut icon" sizes="196x196" href='%PUBLIC_URL%/icon.png' />
+  <script src="./vconsole.min.js"></script>
+  <script>
+    // init vConsole
+    var vConsole = new VConsole();
+  </script>
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
