1.关闭 vconsole 2.优化log 3.没登录不让点击

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <script src="./vconsole.min.js"></script>
   <script>
     // init vConsole
-    var vConsole = new VConsole();
+   // var vConsole = new VConsole();
   </script>
 
   <!--
