1.增加充值接口

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,17 @@
   <link rel="shortcut icon" sizes="196x196" href='%PUBLIC_URL%/icon.png' />
   <script src="./vconsole.min.js"></script>
   <script>
+    //禁用下拉刷新
+    // var lastY = 0;
+    // window.addEventListener('touchmove', function (e) {
+    //   var scrolly = window.pageYOffset || window.scrollTop || 0;
+    //   var direction = e.changedTouches[0].pageY > lastY ? 1 : -1;
+
+    //   if (direction > 0 && scrolly === 0) {
+    //     e.preventDefault();
+    //   }
+    //   lastY = e.changedTouches[0].pageY;
+    // }, { passive: false });
     // init vConsole
    // var vConsole = new VConsole();
   </script>
