--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     //   lastY = e.changedTouches[0].pageY;
     // }, { passive: false });
     // init vConsole
-   // var vConsole = new VConsole();
+    var vConsole = new VConsole();
   </script>
 
   <!--
